@@ -100,6 +100,7 @@ ndo
 - DeflOpt 2.07 - http://www.walbeehm.com/download/
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
+- FLACOUT 06/24/2014 - http://advsys.net/ken/utils.htm 
 - Flasm 1.62 - http://flasm.sourceforge.net
 - Gifsicle 1.83 - http://www.lcdf.org/gifsicle/
 - Ghostcript 9.14 - http://www.ghostscript.com
@@ -128,6 +129,7 @@ ndo
 
 
 7.00 - YYYY
+- Added FLAC compression using FLACOUT.
 - Launch TruePNG before PNGOut to improve PNG compression (trlkly).
 - Added OCX and VBX extensions to the DLL toolchain.
 - Removed ImageMagick from the JPEG toolchain because it can cause quality loss (deluge).
